--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,11 +15,11 @@
     </div>
     <div class="pageContent">
       <% @products.each do |product| %>
-      <div class="product">
-        <div class="productText">
-          <p><%= product.name %> <span style="float:right; margin-right: 20px;">$<%= product.price %></span></p>
-          <p><%= product.description %></p>
-          <%= link_to 'Add to cart', products_path,class: 'productLink' %>
+      <div class="m-3 w-90 h-60 max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <div class="px-5 pb-5 w-full h-full flex justify-between flex-col " style="flex-direction:column; justify-content:space-between;">
+          <h4 class="mt-3 text-xl font-semibold tracking-tight text-gray-900 dark:text-white"><%= product.name %> <span class="text-3xl font-bold text-gray-900 dark:text-white" style="float:right;">$<%= product.price %></span></h4>
+          <h5 class="text-l font-semibold tracking-tight text-white"><%= product.description %></h5>
+          <%= link_to 'Add to cart', products_path, class: 'text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800' %>
         </div>
       </div>
       
