--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,8 +11,15 @@
       <div class="ivoryLineTwo"></div>
     </div>
     <div class="mainDisplay">
-
+      <% if Current.user.present? %>
+        <%= link_to 'Logout', logout_path(id: Current.session.id) %>
+      <% end %>
     </div>
+    <% if Current.user.present? %>
+      <div class="container">
+        <%= link_to 'Add Product', new_product_path, class: 'bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded' %>
+      </div>
+    <% end %>
     <div class="pageContent">
       <% @products.each do |product| %>
       <div class="m-3 w-90 h-60 max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
